--- a/PayGap-GitHub.Rmd
+++ b/PayGap-GitHub.Rmd
@@ -20,16 +20,43 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, message = FALSE)
 ```
+# Understanding the Data
 
-#  Gender pay gap in unadjusted form
+## Gender pay gap in unadjusted form
 % of average gross hourly earnings of men
 
 The indicator measures the difference between average gross hourly earnings of male paid employees and of female paid employees as a percentage of average gross hourly earnings of male paid employees. The indicator has been defined as unadjusted, because it gives an overall picture of gender inequalities in terms of pay and measures a concept which is broader than the concept of equal pay for equal work. All employees working in firms with ten or more employees, without restrictions for age and hours worked, are included.
-source: https://ec.europa.eu/eurostat/databrowser/view/sdg_05_20/
+
+## Statistical Concept and Methodology
+
+## Data Description 
+The indicator measures the difference between average gross hourly earnings of male paid employees and of female paid employees as a percentage of average gross hourly earnings of male paid employees. The indicator has been defined as unadjusted, because it gives an overall picture of gender inequalities in terms of pay and measures a concept which is broader than the concept of equal pay for equal work. All employees working in firms with ten or more employees, without restrictions for age and hours worked, are included.
+
+## Unit of Measure
+% of average gross hourly earnings of men.
+
+## Source 
+ESS (SES)
+
+Data source: Structure of Earnings Survey (SES)
+Data provider: Eurostat, the statistical office of the European Union, based on data reported by the countries.
+source link: https://ec.europa.eu/eurostat/databrowser/view/sdg_05_20/
+
+**Copyrights:** Eurostat Copyright/Licence Policy is applicable.
+
+## Other important information
+online data code: SDG_05_20
+Source of data: Eurostat
+Last data update: 29/10/2020  22:00 (19 days ago)
+Last structure update: 29/10/2020
+Overall data coverage: 2002 — 2018
+Number of values: 433
+
+# Questions to Answer
 
 ```{r library}
 
-library("eurostat")
+library(eurostat)
 library(knitr)
 library(kableExtra)
 library(ggplot2)
@@ -51,7 +78,7 @@ query[, 1:2]
 ```
 
 
-```{r get_eurostat}
+```{r new_variables}
 
 ct <-  c("AT", "BE", "BG", "CH", "CY", "CZ", "DE", "DK", "EE", "EL", "ES", "FI", "FR", "HR","HU", "IE", "IS", "IT", "LI", "LT","LU", "LV", "MT", "NL", "NO", "PL", "PT","RO", "SE", "SI", "SK", "UK")
 
@@ -137,7 +164,6 @@ ggplot(dat, aes(time, values, color = geo, label = geo)) +
 ```
 
 
-
 # Portugal vs. European Union, 2002-2019
 
 ```{r PT_vs_EU}
@@ -158,9 +184,7 @@ ggplot(dat1,
 ```
 
 
-
 ```{r ptvseu_animated}
-
 
 ggplot(dat1, aes(time, values, color = geo, label = geo)) +
   geom_line(alpha = .5) +
@@ -176,7 +200,6 @@ ggplot(dat1, aes(time, values, color = geo, label = geo)) +
   transition_reveal(time) +
   geom_point() +
   transition_reveal(time)
-
 
 ```
 
