--- a/PayGap-GitHub.Rmd
+++ b/PayGap-GitHub.Rmd
@@ -318,33 +318,6 @@ ggplot (dat, aes(x= reorder(geo, values), y = values)) +
   ease_aes()
 ```
 
-## Map
-
-
-```{r animated_plot}
-
-mapdata <-  get_eurostat_geospatial(nuts_level = 0) %>% 
-  right_join (dat) %>% 
-  mutate (cat = cut_to_classes (values, n = 4, decimals = 1))
-head(select(mapdata,geo,values,cat), 3)
-
-ggplot(mapdata, aes(fill = cat)) + 
-  scale_fill_brewer(palette = "RdYlBu") + 
-  geom_sf (color = alpha("white", 1/3), alpha = .6) + 
-  xlim (c(-12,44)) + ylim(c(35, 70)) + 
-  labs( title = "Gender Pay Gap between 2002 and 2019",
-        subtitle = "% of average gross hourly earnings of men",
-        fill = "%") + 
-  labs(title = 'Year: {frame_time}') +
-  transition_time(time) +
-  ease_aes()
-
-```
-
-```{r png_save}
-
-anim_save(filename = "gm_animate.gif")
-
-```
+## The Map is unable to animate
 
 This last animation is not working properly
