--- a/READ_ME_PayGap.Rmd
+++ b/READ_ME_PayGap.Rmd
@@ -9,6 +9,20 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+# Objectives
+
+*Explore the geographical and time trends for the gender pay gap in Europe and compare Portugal with the remaining countries*
+
+
+# Questions
+
+The objective is to look at the geographical and time trends in the data. We will
+answer the following questions:
+
++ What are the time trends for Portugal?
++ How does Portugal compare to other European countries?
++ Which countries have the highest pay gap percentage in Europe by year?
+
 # Understanding the Data
 
 ## Gender pay gap in unadjusted form
