--- a/PayGap-GitHub.Rmd
+++ b/PayGap-GitHub.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Pay_Gap"
+title: "Gender Pay Gap in the EU"
 author: "Raquel Baltazar"
 date: "`r format(Sys.time(), '%a %d %b %Y (%H:%M:%S)')`"
 output:
@@ -21,6 +21,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 ```
 
+# Loading Libraries
 
 ```{r library}
 
@@ -33,11 +34,12 @@ library(data.table)
 library(here)
 library(countrycode)
 library(gganimate)
-theme_set(theme_bw())
 library(gapminder)
 library(data.table)
 
 ```
+
+# Importing the Data
 
 ```{r query}
 query <- search_eurostat(pattern = "Gender pay gap in unadjusted form", 
@@ -53,6 +55,11 @@ ct <-  c("AT", "BE", "BG", "CH", "CY", "CZ", "DE", "DK", "EE", "EL", "ES", "FI",
 PTandEU <-  c("PT","EU27_2020")
 
 ```
+
+# Variables dat and dat1
+
+## dat = Every country in the EU separately
+## dat1 = Portugal vs EU
 
 ```{r get}
 
@@ -75,7 +82,7 @@ dat[1:3,]
 dat1 <- label_eurostat (dat1)
 dat1[1:3,]
 ```
-
+# Clean the data  (remove columns)
 
 ```{r clean_dat_dat1}
 
