--- a/PayGap-GitHub.Rmd
+++ b/PayGap-GitHub.Rmd
@@ -96,7 +96,11 @@ dat1[, c("unit", "nace_r2"):=NULL]
 
 ```
 
-# Gender Pay Gap, 2003-2019
+# Evolution of Gender Pay Gap in EU, 2002-2018
+
+(there is no available data for 2019)
+
+## Line graph
 
 ```{r eurostat_and_plots}
 dat <- get_eurostat(id="sdg_05_20", filters = list(geo = ct))
@@ -110,7 +114,7 @@ ggplot(dat,
                filter(time == max(time)),
              size =2.6) +
   theme(legend.position = "none") + 
-  labs(title = "Gender Pay Gap, 2003-2019",
+  labs(title = "Gender Pay Gap, 2003-2018",
        x= "Year", y= "%")
 
   labs(title = 'Year: {frame_time}', x = 'Time', y = 'Percentage') +
@@ -118,7 +122,7 @@ ggplot(dat,
   ease_aes('linear')
 ```
 
-# Animated
+## The same line graph, but animated
 
 ```{r animated_line}
 ggplot(dat, aes(time, values, color = geo, label = geo)) +
@@ -130,7 +134,7 @@ ggplot(dat, aes(time, values, color = geo, label = geo)) +
   scale_color_viridis_d() +
   labs(x = "Year", y = "Gender Pay Gap") +
   theme(legend.position = "top") + 
-  labs(title = "Gender Pay Gap",
+  labs(title = "Gender Pay Gap, 2002-2018",
        x= "Year", y= "%") +
   transition_reveal(time) +
   geom_point() +
@@ -138,8 +142,12 @@ ggplot(dat, aes(time, values, color = geo, label = geo)) +
 
 ```
 
-# Portugal vs. European Union, 2002-2019
+# Portugal vs. European Union, 2006-2018
 
+**Portugal has no available data until 2006 and the EU only has available data from 2010 on**
+(again, there is  no available data for 2019)
+
+# line graph
 ```{r PT_vs_EU}
 
 pteu <-  c("European Union - 27 countries (from 2020)","Portugal")
@@ -153,12 +161,12 @@ ggplot(dat1,
                filter(time == max(time)),
              size =2.6) +
   theme(legend.position = "none") + 
-  labs(title = "Gender Pay Gap, 2002",
+  labs(title = "Gender Pay Gap, 2006-2019",
        x= "Year", y= "%")
 ```
 
-
-# Then vs Now (bar chart and map)
+# Then vs Now 
+Now we compare the first and the latest years [2002 vs. 2019] provided in the dataset individually.  
 
 ## Gender Pay Gap in 2002
 
@@ -199,7 +207,7 @@ ggplot(mapdata, aes(fill = cat)) +
 **only a few countries have available data for 2002**
 **Portugal only has available data from 2006 on**
 
-## Let's try with 2006
+## Let's try using 2006 as a starting point
 
 ### Bar chart
 ```{r bar_chart1}
@@ -215,6 +223,7 @@ ggplot (dat_2006, aes(x= reorder(geo, values), y = values)) +
   labs (title = "Gender Pay Gap in 2006", 
         y = "%", x = NULL)
 ```
+**Portugal is highlighted for analysis and comparison**
 
 ### Map
 ```{r map1}
@@ -239,6 +248,8 @@ ggplot(mapdata, aes(fill = cat)) +
 ```
 ## Gender Pay Gap in 2018
 
+(again, there is  no available data for 2019)
+
 ### Bar Chart
 
 ```{r bar_chart2}
@@ -252,7 +263,6 @@ ggplot (dat_2018, aes(x= reorder(geo, values), y = values)) +
   labs (title = "Gender Pay Gap in 2018", 
         y = "%", x = NULL)
 ```
-
 
 ### Map
 ```{r map2}
@@ -271,7 +281,7 @@ ggplot(mapdata, aes(fill = cat)) +
   scale_fill_brewer(palette = "RdYlBu") + 
   geom_sf (color = alpha("white", 1/3), alpha = .6) + 
   xlim (c(-12,44)) + ylim(c(35, 70)) + 
-  labs( title = "Gender Pay Gap in 2019",
+  labs( title = "Gender Pay Gap in 2018",
         subtitle = "% of average gross hourly earnings of men",
         fill = "%")
 ```
