--- a/PayGap-GitHub.Rmd
+++ b/PayGap-GitHub.Rmd
@@ -21,6 +21,46 @@ output:
 knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 ```
 
+*We will use Eurostat’s indicator data for “Gender pay gap in unadjusted form” as a case study when working with the data.table R package and apply a few animations using gganimate. The goal is to explore the geographical and time trends for the gender pay gap in the EU and compare Portugal with some EU's countries*
+
+We will start by learning about and understanding the raw data, which we will then process (“wrangle”) in preparation for some exploratory analysis.*
+
+# Objective
+The objective is to look at the geographical and time trends in the data. We will
+answer the following questions:
+
++ What are the time trends for Portugal?
++ How does Portugal compare to other European countries?
++ Which countries have the highest pay gap percentage in Europe by year?
+
+# Understanding the Data
+
+## Gender pay gap in unadjusted form
+% of average gross hourly earnings of men
+
+The indicator measures the difference between average gross hourly earnings of male paid employees and of female paid employees as a percentage of average gross hourly earnings of male paid employees. The indicator has been defined as unadjusted, because it gives an overall picture of gender inequalities in terms of pay and measures a concept which is broader than the concept of equal pay for equal work. All employees working in firms with ten or more employees, without restrictions for age and hours worked, are included.
+
+## Statistical Concept and Methodology
+
+## Data Description 
+The indicator measures the difference between average gross hourly earnings of male paid employees and of female paid employees as a percentage of average gross hourly earnings of male paid employees. The indicator has been defined as unadjusted, because it gives an overall picture of gender inequalities in terms of pay and measures a concept which is broader than the concept of equal pay for equal work. All employees working in firms with ten or more employees, without restrictions for age and hours worked, are included.
+
+Overall data coverage: 2002 — 2018
+Number of values: 433
+
+## Unit of Measure
+% of average gross hourly earnings of men.
+
+## Source 
+ESS (SES)
+Source of data: Eurostat
+Data source: Structure of Earnings Survey (SES)
+Data provider: Eurostat, the statistical office of the European Union, based on data reported by the countries.
+source link: https://ec.europa.eu/eurostat/databrowser/view/sdg_05_20/
+online data code: SDG_05_20
+
+**Copyrights:** Eurostat Copyright/Licence Policy is applicable.
+
 # Loading Libraries
 
 ```{r library}
